# spatial-data-conflation-open-toolchain

./: README.md  generate-help-markdown.sh  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
doc/: csv2excel-help.md  csv2geojson-help.md  csvedit-help.md  dictionarybuilder-help.md  geojsonconcat-help.md  geojsondiff-help.md  geojsonedit-help.md  geojsonmerger-help.md  json2csv-help.md  overpassql2osmf-help.md
examples/osm-x-wikidata-hospital/: hospital_BR-RS.overpassql  hospital_BR-RS.rq  run.sh
src/csv2excel/: csv2excel.py
src/csv2geojson/: csv2geojson.py
src/geojsondiff/: geojsondiff.py
src/gisconflation/: csv2gecodedcsv.py  csvedit.py  dictionarybuilder.py  dictionarymerger.py  geojsonconcat.py  geojsonedit.py  geojsonmerger.py  osmf2geojson.py  overpassql2osmf.py  util.py
tests/: generate-help-markdown.sh  test_cli.sh  test_main.py
tests/data/: .gitignore  geojson-simple.geojson
