[metadata]
name = gis-conflation-toolchain
version = 0.7.0
author = Emerson Rocha
author_email = rocha@ieee.org
description = gis-conflation-toolchain
long_description = file: README.md
# long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/fititnt/spatial-data-conflation-open-toolchain
project_urls =
    Bug Tracker = https://github.com/fititnt/spatial-data-conflation-open-toolchain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
# package_dir =
#     = src
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    csv2excel = csv2excel.csv2excel:exec_from_console_scripts
    csv2geojson = csv2geojson.csv2geojson:exec_from_console_scripts
    geojsondiff = geojsondiff.geojsondiff:exec_from_console_scripts
    # osmf2geojson = gisconflation.osmf2geojson:exec_from_console_scripts
    overpassql2osmf = gisconflation.overpassql2osmf:exec_from_console_scripts

#### pypi ______________________________________________________________________
### Upload, register step ------------------------------------------------------

## @see https://packaging.python.org/tutorials/packaging-projects/
# python3 -m pip install --upgrade build
# python3 -m build
#
# To install locally (example v 0.5.6)
#      python3 -m build ; python3 -m pip install dist/gis_conflation_toolchain-0.7.0-py3-none-any.whl --force
## Note: create token a save on $HOME/.pypirc
##       the instructions will be from
#        - https://test.pypi.org/manage/account/token/
#        - https://pypi.org/manage/account/token/

### Upload, each new version ---------------------------------------------------
# Note: remember to replace the version number also by string replace, as
#       since some files beyond setup.cfg also have the reference
# rm dist/*
# python3 -m build
# python3 -m twine upload --repository pypi dist/*